--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -508,13 +508,13 @@ body{
 
 .about-me-ctn{
     width: 1245px; 
-    position: relative;
-    overflow: auto;
+    /* position: static; */
+    overflow: hidden;
     margin: 0 auto;
-    padding: 30px 0;
+    padding: 0;
     opacity: 1;
     height: 450px;
-    scroll-snap-type: y mandatory;
+    /* scroll-snap-type: y mandatory; */
     -ms-overflow-style: none;  
     scrollbar-width: none;  
 }
@@ -523,10 +523,14 @@ body{
     display: none;
   }
 .about-me{
-    scroll-snap-align: start;
+    /* scroll-snap-align: start; */
     height: 450px;
     padding: 0;
     margin: 0;
+}
+
+#about-me2{
+    margin-top: 28px;
 }
 
   
@@ -557,7 +561,7 @@ body{
 .about-me-text{
     text-align: center;
     width: 70%;
-    padding: 3% 10px 0 10px;
+    padding: 0 10px 0 10px;
     z-index: 10;
     margin-left: 5%;
 }
@@ -1555,6 +1559,9 @@ span-but{
     }
     .skills-header{
         margin-top: 300px;
+    }
+    #about-me2{
+        margin: 0;
     }
 }
 
