--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -530,7 +530,7 @@ body{
 }
 
 #about-me2{
-    margin-top: 28px;
+    /* margin-top: 28px; */
 }
 
   
@@ -1635,11 +1635,11 @@ span-but{
 
     .about-me-ctn{
         width: 100%;
-        height: 500px;
+        height: 450px;
     }
 
     .about-me{
-        height: 500px;
+        height: 450px;
     }
 
     .second-gif{
