--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -205,7 +205,7 @@ body{
 }
 
 .name-profile img{
-    border-radius: 200px;
+    border-radius: 75px;
     width: 70%;
     min-width: 240px;
     border: 3px solid #f1564e;
@@ -500,6 +500,8 @@ body{
     left: 0px;
     opacity: 0.5;
 }
+
+
 
 
 .about-me-title{
@@ -887,7 +889,7 @@ span-but{
 
 .watercolor-ctn{
     position: relative;
-
+    pointer-events: none; 
 }
 
 .watercolor-ctn img{
@@ -901,6 +903,7 @@ span-but{
 
 .red-paint-bg{
     position: relative;
+    pointer-events: none; 
 }
 
 .red-paint-bg img{
@@ -1364,6 +1367,185 @@ span-but{
     opacity: 0;
   }
 
+  .spikes{
+    position: relative;
+    margin: 100px 0;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 650px;
+    --spike-color: #FFFFFF;
+    --spike-width: 50px;
+    --spike-height: 10px;
+    background: #ececec; 
+        /* linear-gradient(
+            to right, 
+            #4291c9, 
+            #a9ecf1
+        ); */
+
+  }
+
+  .spikes::before, .spikes::after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: var(--spike-height);
+    background: var(--spike-color);
+    -webkit-mask-image: url('img-com/triangle.svg');
+    -webkit-mask-size: var(--spike-width) var(--spike-height);
+    background: var(--spike-color);
+    mask-image: url('img-com/triangle.svg');
+    mask-size: var(--spike-width) var(--spike-height);
+
+
+
+  }
+
+  .spikes::before{
+    top: 0;
+  }
+
+  .spikes::after{
+    bottom: 0;
+    transform: rotate(.5turn);
+
+  }
+
+  .form-ctn{
+    width: 700px;
+    padding: 50px 25px 30px 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 10px;
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.3), 0 0 5px #000000;
+    position: relative;
+    overflow: hidden;
+    margin: 0 10px;
+  }
+
+  .mail-img{
+    position: relative;
+    pointer-events: none; 
+    width: 600px;
+  }
+
+  .mail-img img{
+    position: absolute;
+    transform: rotate(-15deg);
+    top: -670px;
+    width: 100%;
+  }
+
+  /* .mail-img{
+    position: relative;
+    pointer-events: none; 
+    width: 100px;
+    top: -600px;
+    left: 300px;
+    border: 1px solid black;
+  }
+
+  .mail-img img{
+    position: absolute;
+    transform: rotate(-15deg);
+    width: 100%;
+  } */
+
+  .form-ctn::after{
+    content: "";
+    position: absolute;
+    height: 15rem;
+    width: 15rem;
+    background-color: #000000;
+    top: -8rem;
+    right: -8rem;
+    border-radius: 50%;
+  }
+
+  .form-ctn:hover{
+    box-shadow: 0 0 5px #000000, 0 0 5px #000000;
+  }
+
+  .contact-title{
+    font-size: 1.8rem;
+    margin: 10px 0;
+    font-weight: 500;
+    color: black;
+    margin-bottom: 30px;
+  }
+
+  .row{
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .w-50{
+    width: 50%;
+    padding: 5px 10px;
+  }
+
+  .w-100{
+    width: 100%;
+    padding: 5px 10px;
+  }
+
+  input, textarea{
+    width: 100%;
+    outline: none;
+    padding: 15px;
+    background-color: transparent;
+    color: #000000;
+    /* border: 1px solid rgba(255, 255, 255, 0.3); */
+    border: 1px solid #333333;
+    font-size: 1rem;
+    border-radius: 5px;
+    margin: 5px 0;
+    transition: all 0.4s ease;
+  }
+
+  input::placeholder, 
+  textarea::placeholder{
+    /* color: rgba(255, 255, 255, 0.3); */
+    color: #333333;
+  }
+
+  textarea{
+    resize: none;
+  }
+
+  input:focus, 
+  textarea:focus{
+    box-shadow: 0 0 5px #000000; 
+  }
+
+  .item_center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+  }
+
+  .contact-button{
+    width: 150px;
+    background-color: transparent;
+    color: #000000;
+    outline: none;
+    border: 1px solid #000000;
+    border-radius: 25px;
+    margin: 5px 0;
+    padding: 15px 20px;
+    font-size: 1rem;
+  }
+  .contact-button:hover{
+    background-color: #000000;
+    width: 180px;
+    color: #FFFFFF;
+    font-weight: 600;
+  }
   /* FOOTER */
   footer{
     position: relative;
@@ -1859,6 +2041,19 @@ span-but{
         display: none;
     }
 
+    .w-50{
+        width: 100%;
+    }
+
+    .form-ctn::after{
+        top: -9.5rem;
+        right: -9.5rem;
+    }
+
+    .mail-img{
+        width: 90%;
+    }
+
     footer{
         padding: 0 0 75px 0;
         margin-top: 150px; 
@@ -1921,5 +2116,8 @@ span-but{
 
     .grid-item{
         padding: 10px !important;
+    }
+    .mail-img{
+        width: 80%;
     }
   }
