--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -1441,6 +1441,7 @@ span-but{
 
   .mail-img img{
     position: absolute;
+    pointer-events: none; 
     transform: rotate(-10deg);
     top: -1070px;
     width: 100%;
@@ -1473,6 +1474,7 @@ span-but{
 
   .letter-img2 img{
     width: 100%;
+    pointer-events: none; 
     
   }
 
