--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -11,11 +11,42 @@ body{
     color: black;
 }
 
+.skills-header, .project-title, .about-me-title-ctn{
+    position: relative;
+}
+.skills-header h1, .project-title h1, .about-me-title-ctn h1{
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+}
+.skills-header h1::before, .project-title h1::before, .about-me-title-ctn h1::before{
+    content: "";
+    position: absolute;
+    display: block; 
+    width: 120px;
+    height: 1px;
+    background: #ddd;
+    bottom: 1px;
+    left: calc(50% - 60px);
+}
+.skills-header h1::after, .project-title h1::after, .about-me-title-ctn h1::after{
+    content: "";
+    position: absolute;
+    display: block; 
+    width: 40px;
+    height: 3px;
+    background: #0563bb;
+    bottom: 0;
+    left: calc(50% - 20px);
+}
+
+
+
 .skills-placeholder{
     margin-top: 250px;
     position: absolute;
     visibility: hidden;
 }
+
 .about-placeholder{
     position: absolute;
     visibility: hidden;
@@ -492,7 +523,8 @@ body{
 .about-me-background::before{
     width: 100%;
     content: "";
-    background: url('./img-com/flower4.jpg');
+    background: url('./img-com/AdobeStock_251950890\ \(1\).jpeg');
+    background-size: cover;
     background-attachment: fixed;
     position: absolute;
     top: 0px;
@@ -516,7 +548,7 @@ body{
     margin: 0 auto;
     padding: 0;
     opacity: 1;
-    height: 450px;
+    height: 100%;
     /* scroll-snap-type: y mandatory; */
     -ms-overflow-style: none;  
     scrollbar-width: none;  
@@ -570,7 +602,9 @@ body{
 }
 
 .about-me-text p{
-    background-color: rgba(255, 255, 255, 0.341);
+    /* background-color: rgba(255, 255, 255, 0.341); */
+    background-color: rgba(255, 255, 255, 0.641);
+
     font-family: 'Jost', sans-serif;
     font-size: 1.1rem;
 }
@@ -658,7 +692,7 @@ body{
 .why-me li{
     list-style: none;
     margin-top: 5px;
-    background-color: rgba(255, 255, 255, 0.341);
+    background-color: rgba(255, 255, 255, 0.641);
     color: #000000;
     display: flex;
     min-width: 500px;
@@ -1395,17 +1429,9 @@ span-but{
     --spike-color: #FFFFFF;
     --spike-width: 50px;
     --spike-height: 10px;
+    background: radial-gradient(circle, rgba(236,236,236,1) 0%, rgba(198,198,198,1) 100%);
     /* background: #ececec;  */
     /* background: #ffcfcf; */
-    /* background: radial-gradient(circle, rgba(255,207,207,1) 0%, rgba(249,216,215,1) 50%, rgba(255,126,152,1) 100%); */
-    /* background: radial-gradient(circle, rgba(236,236,236,1) 0%, rgba(195,184,184,1) 50%, rgba(168,167,167,1) 100%); */
-    /* background: radial-gradient(circle, rgba(236,236,236,1) 0%, rgba(235,219,219,1) 50%, rgba(208,147,147,1) 100%); */
-    /* background: radial-gradient(circle, rgba(236,236,236,1) 0%, rgba(210,190,190,1) 50%, rgba(171,171,171,1) 100%); */
-    background: radial-gradient(circle, rgba(236,236,236,1) 0%, rgba(255,241,241,1) 50%, rgba(171,171,171,1) 100%);
-
-
-
-
   }
 
   .spikes::before, .spikes::after{
@@ -1457,17 +1483,20 @@ span-but{
   }
 
   .mail-img{
-    position: relative;
+    position: absolute;
     pointer-events: none; 
-    width: 600px;
+    width: 400px;
   }
 
   .mail-img img{
     position: absolute;
     pointer-events: none; 
     transform: rotate(-10deg);
-    top: -1070px;
-    width: 100%;
+    /* top: -1070px; */
+    width: 80%;
+    z-index: 10;
+    top: -280px;
+    right: 450px;
   }
 
   .letter-img{
@@ -1736,8 +1765,8 @@ span-but{
         background-position-x: 1000px;
     }
   }
-
-@media screen and (min-width: 1639px) {
+/* For wide screens */
+@media screen and (min-width: 1241px) {
     .bubble-content{
         margin-top: 200px;
     }
@@ -1759,6 +1788,47 @@ span-but{
     }
     .name-profile-ctn img{
         width: 90%;
+    }
+    .contactBtn{
+        font-size: 1.8rem;
+    }
+    .skills-title{
+        font-size: 3rem; 
+    }
+    .about-me-background{
+        height: 600px;
+    }
+    .about-me{
+        height: 600px;
+    }
+    .gif-props{
+        align-items: center;
+    }
+
+    .about-me-text h1, .gif-h1{
+        font-size: 2.5rem !important;
+    }
+    .about-me-text p{
+        font-size: 1.3rem;
+    }
+    .personal-details .email-location .personal li, .personal-details .education-employment .personal li{
+        font-size: 1.1rem;
+    }
+    .personal-details .email-location .personal li p, .personal-details .education-employment .personal li p{
+        font-size: 1.3rem;
+    }
+    .ctn{
+        padding-bottom: 0!important;
+    }
+    .vl{
+        margin: auto 80px !important;
+    }
+    .why-me-text{
+        font-size: 17px;
+    }
+    .why-me-text2{
+        /* font-size: 1.1rem; */
+        font-size: 18px;
     }
 }
   
@@ -1782,20 +1852,24 @@ span-but{
     .projects-placeholder{
         margin-top: 400px;
     }
+    .about-me-text h1, .gif-h1{
+        font-size: 2rem !important;
+    }
+    .about-me-text p{
+        font-size: 1rem;
+    }
+    .personal-details .email-location .personal li, .personal-details .education-employment .personal li{
+        font-size: 0.9rem;
+    }
+    .personal-details .email-location .personal li p, .personal-details .education-employment .personal li p{
+        font-size: 0.9rem;
+    }
 }
 
 @media screen and (max-width: 1408px) and (min-width: 1040px) {
     .grid-item{
         width: 47%;
         margin: 10px!important;
-    }
-}
-
-@media screen and (max-width: 1362px){
-    .mail-img img{
-        width: 500px;
-        /* top: -640px; */
-        left: 150px;
     }
 }
 
@@ -2192,7 +2266,7 @@ span-but{
 
   }
 
-
+/* For smalls screens */
   @media screen and (max-width: 405px) {
     .nav-header, .navigation, .navigationTrans{
         width: 100%;
