--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -518,6 +518,7 @@ body{
     text-align: center;
     margin: 0 auto;    
     margin-top: 300px;
+    height: 450px;
 }
 
 .about-me-background::before{
@@ -1775,6 +1776,7 @@ span-but{
     }
     .about-me-background{
         margin-top: 500px;
+        height: 600px;
     }
     .bio-desc1{
         font-size: 45px; 
