about me height

--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -2093,6 +2093,10 @@ span-but{
         margin-top: 80px;
     }
 
+    .about-me-background{
+        height: 2000px;
+    }
+
 
     .about-me-ctn{
         width: 100%;
